# dw-commodities

./: .user.yml  profiles.yml  pyproject.toml
dwcommodities/: dbt_project.yml
dwcommodities/docs/: homepage.md
dwcommodities/models/: schema.yaml
dwcommodities/models/staging/: schema.yaml  stg_commodities.sql  stg_movimentacao_commodities.sql
src/: extract.py
