[tool.poetry]
name = "Data Warehouse - commodities em Python, SQL e DBT-Core"
version = "0.1.0"
description = ""
authors = ["Breno Mendes <b.mendesbernardo2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
